--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -20,7 +20,8 @@ body:
     options:
       - label: My issue isn't already found on the Issue tracker.
         required: true
-      - label: My issue is about **PlaceholderAPI** and not any expansion or external plugin
+      - label: I have checked the [FAQ](https://filoghost.me/docs/holographic-displays/faq)
+        description: I have checked the [FAQ](https://filoghost.me/docs/holographic-displays/faq)
         required: true
       - label: The issue isn't already fixed in a Spigot Release or Development Build.
         required: true
