--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -7,9 +7,9 @@ body:
     value: |-      
       ## Before opening a bug report:
        * Read the [FAQ](https://filoghost.me/docs/holographic-displays/faq)
-       * Try the latest development build: [https://ci.codemc.io/job/filoghost/job/HolographicDisplays]()
-       * Try updating Spigot to the latest release of your version
-       * Make sure the bug hasn't already [been reported](?q=is%3Aissue)
+       * Try the [latest development build](https://ci.codemc.io/job/filoghost/job/HolographicDisplays)
+       * Update Spigot to the latest release of your particular version
+       * Make sure the bug hasn't already been reported [here](https://github.com/filoghost/HolographicDisplays/issues?q=is%3Aissue)
       
       Don't paste long text files in the description, upload them as attachments or on Pastebin.
       
