--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -14,7 +14,7 @@ body:
 - type: checkboxes
   attributes:
     label: Confirmation
-    description: Please make sure to have followed the following checks.
+    description: ### Please confirm to have done the following before proceeding:
     options:
       - label: I have read the [FAQ](https://filoghost.me/docs/holographic-displays/faq).
         required: true
