--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -14,7 +14,7 @@ body:
 - type: checkboxes
   attributes:
     label: Confirmation
-    description: Please confirm to have done the following before proceeding:
+    description: "Please confirm to have done the following before proceeding:"
     options:
       - label: I have read the [FAQ](https://filoghost.me/docs/holographic-displays/faq).
         required: true
@@ -23,6 +23,7 @@ body:
       - label: I have updated Spigot to the latest release for my particular Minecraft version.
         required: true
       - label: I made sure the bug hasn't already been reported on the [issue tracker](https://github.com/filoghost/HolographicDisplays/issues?q=is%3Aissue).
+        required: true
 
 - type: textarea
   attributes:
