--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -13,7 +13,7 @@ body:
 
 - type: checkboxes
   attributes:
-    description: "## Please confirm to have done the following before proceeding:"
+    description: "# Please confirm to have done the following before proceeding:"
     options:
       - label: I have read the [FAQ](https://filoghost.me/docs/holographic-displays/faq).
         required: true
