--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -27,18 +27,10 @@ body:
 - type: textarea
   attributes:
     label: "Description"
-    description: Write a clear and concise description of the bug.
-    placeholder: What happened? What did you expect instead?
-  validations:
-    required: true
-- type: textarea
-  attributes:
-    label: "How to reproduce"
-    description: Provide a list of steps to reproduce the bug
-    placeholder: |-
-      1. Step 1
-      2. Step 2
-      3. ...
+    description: |-
+      Write a clear and concise description of the bug, describe what you expected to happen and what happened instead.
+      Add any addition server log as attachment or upload them to [Pastebin](https://pastebin.com)
+    placeholder: The plugin should do ..., instead it does ...
   validations:
     required: true
 
@@ -53,50 +45,37 @@ body:
   validations:
     required: true
 
-- type: textarea
+- type: input
   attributes:
-    label: "What happens?"
-    description: "What bug are you encountering? Try to explain it as detailed as possible."
-    placeholder: "PlaceholderAPI does this when I do that..."
+    label: "Server version (output of `/version`):"
+    placeholder: "This server is running CraftBukkit version 3132-Spigot-66f9d3c-40caacc (MC: 1.17) (Implementing API version 1.17-R0.1-SNAPSHOT)"
   validations:
     required: true
-- type: textarea
+
+- type: input
   attributes:
-    label: "Expected Behaviour"
-    description: "What behaviour did you expect from PlaceholderAPI?"
-    placeholder: "PlaceholderAPI should actually do..."
+    label: "Holographic Displays version (output of `/version HolographicDisplays`):"
+    placeholder: "HolographicDisplays version 2.4.8-SNAPSHOT-b174"
   validations:
     required: true
+
 - type: input
-  id: "dump"
   attributes:
-    label: "`/papi dump` Output"
-    description: |-
-      Please execute the `/papi dump` command and provide the generated URL from it.
-      If you can't execute the command (i.e. PlaceholderAPI doesn't start up) can you put N/A here and mention the issue in the `Additional Information` field.
-    placeholder: "https://paste.helpch.at/dump.log"
+    label: "ProtocolLib version, if installed (output of `/version ProtocolLib`):"
+    placeholder: "ProtocolLib version 4.6.0-SNAPSHOT-b476"
   validations:
     required: true
+
 - type: input
-  id: "console"
   attributes:
-    label: "Console Log"
-    description: |-
-      Get the latest content of your `latest.log` file an upload it to https://paste.helpch.at
-      Take the generated URL and paste it into this field.
-    placeholder: "https://paste.helpch.at/latest.log"
-- type: input
-  id: "error"
-  attributes:
-    label: "Errors"
-    description: |-
-      Upload any errors you find to https://paste.helpch.at and post the link in the field below.
-    placeholder: "https://paste.helpch.at/error.log"
+    label: "Do you use plugins to allow players to join with multiple Minecraft versions (such as ViaVersion, ProtocolSupport, ...):"
+
 - type: textarea
   attributes:
-    label: "Additional Info"
+    label: "Additional info"
     description: |-
-      Add any extra info you think is nessesary for this Bug report.
-      - If you selected `API Bug` will you need to include code-examples here to reproduce the issue.
-      - If you selected `Plugin/Server Incompatability` should you include extra Server info such as a Timings or Spark-Report or info about the plugin in question.
+      Attach here:
+      * Screenshots
+      * Server logs
+      * Configurations
     placeholder: "Put any extra info you like into this field..."
