--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -7,10 +7,6 @@ body:
     value: |-     
       Please fill the form carefully and provide any requested information, required fields are marked with an asterisk (`*`).
       Thanks for contributing to the project.
-      
-      
-      
-      
 
 - type: checkboxes
   attributes:
@@ -55,14 +51,16 @@ body:
 
 - type: input
   attributes:
-    label: "Holographic Displays version (output of `/version HolographicDisplays`):"
+    label: "Holographic Displays version"
+    description: "Paste the output of the command `/version HolographicDisplays`"
     placeholder: "HolographicDisplays version 2.4.8-SNAPSHOT-b174"
   validations:
     required: true
 
 - type: input
   attributes:
-    label: "ProtocolLib version, if installed (output of `/version ProtocolLib`):"
+    label: "ProtocolLib version (if installed)"
+    description: "Paste the output of the command `/version ProtocolLib`"
     placeholder: "ProtocolLib version 4.6.0-SNAPSHOT-b476"
   validations:
     required: true
