--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -35,9 +35,9 @@ body:
     label: "How to reproduce"
     description: List of steps to reproduce the bug.
     placeholder: |-
-      1. Do this
-      2. Do that
-      3. ...
+      1. Step 1
+      2. Step 2
+      ...
   validations:
     required: true
 
