--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -13,7 +13,7 @@ body:
     label: Confirmation
     description: "Please confirm to have done the following checks before reporting the bug."
     options:
-      - label: I have read the [FAQ](https://filoghost.me/docs/holographic-displays/faq).
+      - label: I have read the **[FAQ]**(https://filoghost.me/docs/holographic-displays/faq).
         required: true
       - label: I have tried using the [latest development build](https://ci.codemc.io/job/filoghost/job/HolographicDisplays) of Holographic Displays.
         required: true
