--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -25,8 +25,8 @@ body:
   attributes:
     label: "Description"
     description: |-
-      Clear and concise description of the bug. What happened? What did you expected to happen instead?
-    placeholder: The plugin should do ..., instead it does ...
+      Clear description of the bug. What happened? What did you expect to happen instead?
+    placeholder: When I (...) I expected the plugin to (...), instead it (...)
   validations:
     required: true
 
