--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -26,7 +26,7 @@ body:
     label: "Description"
     description: |-
       Clear description of the bug. What happened? What did you expect to happen instead?
-    placeholder: When I (...) I expected the plugin to (...), instead it (...)
+    placeholder: When I did (X), I expected the plugin to do (Y), instead it did (Z)
   validations:
     required: true
 
