--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -26,7 +26,7 @@ body:
     label: "Description"
     description: |-
       Clear and concise description of the bug. What were you trying do? What happened? What did you expect to happen instead?
-    placeholder: I was trying to do (...). The plugin did (...). Instead, I expect that the plugin would do (...).
+    placeholder: I was trying to do (this thing). The plugin did (that). I expected instead that the result would be (...).
   validations:
     required: true
 
