--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -5,7 +5,7 @@ body:
 - type: markdown
   attributes:
     value: |-     
-      Please fill the form carefully and provide the requested information. Thanks for contributing to the project.
+      Please fill this form carefully and provide the requested details. Thanks for contributing to the project.
 
 - type: checkboxes
   attributes:
@@ -25,8 +25,8 @@ body:
   attributes:
     label: "Description"
     description: |-
-      Clear and concise description of the bug. What were you trying do? What happened? What did you expect to happen instead?
-    placeholder: I was trying to do (this thing). The plugin did (that). I expected instead that the result would be (...).
+      Clear and concise description of the bug. What happened? What did you expect to happen instead?
+    placeholder: . The plugin did [ The plugin did (that). I expected instead that the result would be (...).
   validations:
     required: true
 
