--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -9,30 +9,30 @@ body:
 
 - type: checkboxes
   attributes:
-    label: Confirmation
-    description: Please confirm to have done the following checks before opening a new issue.
+    label: "Confirmation"
+    description: "Please confirm to have done the following checks before opening a new issue."
     options:
-      - label: I have read the [FAQ](https://filoghost.me/docs/holographic-displays/faq).
+      - label: "I have read the [FAQ](https://filoghost.me/docs/holographic-displays/faq)."
         required: true
-      - label: I have tested the [latest development build](https://ci.codemc.io/job/filoghost/job/HolographicDisplays) of Holographic Displays and the bug is still present.
+      - label: "I have tested the [latest development build](https://ci.codemc.io/job/filoghost/job/HolographicDisplays) of Holographic Displays and the bug is still present."
         required: true
-      - label: I have updated **Spigot** (and **ProtocolLib** if installed) to the latest release for my particular Minecraft version.
+      - label: "I have updated **Spigot** (and **ProtocolLib** if installed) to the latest release for my particular Minecraft version."
         required: true
-      - label: I made sure the bug hasn't already been reported on the [issue tracker](https://github.com/filoghost/HolographicDisplays/issues?q=is%3Aissue).
+      - label: "I made sure the bug hasn't already been reported on the [issue tracker](https://github.com/filoghost/HolographicDisplays/issues?q=is%3Aissue)."
         required: true
 
 - type: textarea
   attributes:
-    label: Description
-    description: Clear and concise description of the bug. What happened? What did you expect to happen instead?
-    placeholder: . The plugin did [ The plugin did (that). I expected instead that the result would be (...).
+    label: "Description"
+    description: "Clear and concise description of the bug. What happened? What did you expect to happen instead?"
+    placeholder: ". The plugin did [ The plugin did (that). I expected instead that the result would be (...)."
   validations:
     required: true
 
 - type: textarea
   attributes:
-    label: How to reproduce
-    description: List of steps to reproduce the bug.
+    label: "How to reproduce"
+    description: "List of steps to reproduce the bug."
     placeholder: |-
       1. Step 1
       2. Step 2
@@ -42,31 +42,31 @@ body:
 
 - type: input
   attributes:
-    label: Server version
-    description: Output of the command `/version`
-    placeholder: This server is running CraftBukkit version 3132-Spigot-66f9d3c-40caacc (MC: 1.17) (Implementing API version 1.17-R0.1-SNAPSHOT)
+    label: "Server version"
+    description: "Output of the command `/version`"
+    placeholder: "This server is running CraftBukkit version 3132-Spigot-66f9d3c-40caacc (MC: 1.17) (Implementing API version 1.17-R0.1-SNAPSHOT)"
   validations:
     required: true
 
 - type: input
   attributes:
-    label: Holographic Displays version
-    description: Output of the command `/version HolographicDisplays`
-    placeholder: HolographicDisplays version 2.4.8-SNAPSHOT-b174
+    label: "Holographic Displays version"
+    description: "Output of the command `/version HolographicDisplays`"
+    placeholder: "HolographicDisplays version 2.4.8-SNAPSHOT-b174"
   validations:
     required: true
 
 - type: input
   attributes:
-    label: ProtocolLib version (if installed)
-    description: Output of the command `/version ProtocolLib`
-    placeholder: ProtocolLib version 4.6.0-SNAPSHOT-b476
+    label: "ProtocolLib version (if installed)"
+    description: "Output of the command `/version ProtocolLib`"
+    placeholder: "ProtocolLib version 4.6.0-SNAPSHOT-b476"
 
 - type: input
   attributes:
-    label: Do you use plugins that allow players to join with multiple Minecraft versions (such as ViaVersion, ViaBackwards, ProtocolSupport, ...)?
-    description: List the relevant plugins you use, if any.
-    placeholder: ViaVersion, ViaBackwards
+    label: "List of installed plugins that allow players to join with multiple Minecraft versions"
+    description: "List of installed plugins such as ViaVersion, ViaBackwards, ProtocolSupport (if any)."
+    placeholder: "ViaVersion, ViaBackwards"
 
 - type: textarea
   attributes:
