--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -25,9 +25,9 @@ body:
   attributes:
     label: "Description"
     description: |-
-      Clear and concise description of the bug. What happened? What did you expect to happen instead?
+      Clear and concise description of the bug.
       Avoid long error logs, add them in the "Addition information" area at the bottom of this form.
-    placeholder: ". The plugin did [ The plugin did (that). I expected instead that the result would be (...)."
+    placeholder: "What happened? What did you expect to happen instead?"
   validations:
     required: true
 
