--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -26,7 +26,7 @@ body:
     label: "Description"
     description: |-
       Clear and concise description of the bug.
-      Avoid long error logs, add them in the "Addition information" area at the bottom of this form.
+      ## **Avoid long error logs**, add them in the "Addition information" area at the bottom of this form.
     placeholder: "What happened? What did you expect to happen instead?"
   validations:
     required: true
