--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -1,6 +1,7 @@
 name: 🐞 Bug Report
 description: Report a bug or some unexpected behavior.
-labels: Bug
+labels:
+- "Bug"
 body:
 - type: markdown
   attributes:
