--- a/.github/ISSUE_TEMPLATE/2-feature.yml
+++ b/.github/ISSUE_TEMPLATE/2-feature.yml
@@ -8,7 +8,7 @@ body:
     value: |-     
       Please fill this form carefully and provide the requested details. Thank you for contributing to the project.
       
-      Only suggest changes that would benefit many users, not just a specific situation.
+      Suggest changes or additions that would benefit **as many users as possible**, not just a specific situation.
 
 - type: textarea
   attributes:
