--- a/.github/ISSUE_TEMPLATE/2-feature.yml
+++ b/.github/ISSUE_TEMPLATE/2-feature.yml
@@ -5,10 +5,8 @@ labels:
 body:
 - type: markdown
   attributes:
-    value: |-     
-      Please fill this form carefully and provide the requested details. Thank you for contributing to the project.
-      
-      Suggest changes that would benefit as many users as possible, not just specific situations.
+    value: |-
+      Please suggest changes that would benefit as many users as possible, not just specific situations. Thank you for contributing to the project.
 
 - type: textarea
   attributes:
