--- a/.github/ISSUE_TEMPLATE/4-documentation.yml
+++ b/.github/ISSUE_TEMPLATE/4-documentation.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |-
-        Suggest a change or report an error to improve the official documentation. Thank you for contributing to the project.
+        Suggest a change to improve the official documentation. Thank you for contributing to the project.
 
   - type: textarea
     attributes:
