--- a/.github/ISSUE_TEMPLATE/3-help.yml
+++ b/.github/ISSUE_TEMPLATE/3-help.yml
@@ -1,12 +1,12 @@
 name: 📝 Help request
-description: "Ask a question about the plugin."
+description: "Ask a question."
 labels:
   - "Help"
 body:
   - type: markdown
     attributes:
       value: |-
-        Please make sure you are using. Thank you for contributing to the project.
+        Please make sure you are using a recent version of the plugin.
 
   - type: checkboxes
     attributes:
@@ -23,5 +23,13 @@ body:
       label: "Description"
       description: "Describe your goal and what you have tried so far."
       placeholder: "What are you trying to achieve? What have you tried so far?"
+    validations:
+      required: true
+
+  - type: input
+    attributes:
+      label: "Holographic Displays version"
+      description: "Output of the command `/version HolographicDisplays`."
+      placeholder: "HolographicDisplays version 2.4.8-SNAPSHOT-b174"
     validations:
       required: true
