--- a/.github/ISSUE_TEMPLATE/3-help.yml
+++ b/.github/ISSUE_TEMPLATE/3-help.yml
@@ -17,6 +17,8 @@ body:
           required: true
         - label: "I have read the [FAQ](https://filoghost.me/docs/holographic-displays/faq)."
           required: true
+        - label: "I am using a recent version of the plugin."
+          required: true
 
   - type: textarea
     attributes:
@@ -30,7 +32,7 @@ body:
     attributes:
       label: "Holographic Displays version"
       description: "Output of the command `/version HolographicDisplays`."
-      placeholder: "HolographicDisplays version 2.4.8-SNAPSHOT-b174"
+      placeholder: "HolographicDisplays version 1.2.3-SNAPSHOT-b45"
     validations:
       required: true
 
